@@ -113,6 +113,7 @@ Michele Ginesi
 Nicolo Giorgetti
 Arun Giridhar
 Michael D. Godfrey
+Dave Goel
 Michael Goffioul
 Glenn Golden
 Tomislav Goles
